# fps_game

./: CMakeLists.txt  README.md  models_licenses.md
res/models/: enemy.gltf
res/models/enemy/: enemy.gltf
res/models/fps_pistol/: fps_pistol.gltf
res/models/level1/: level1.gltf
res/models/level1_nav_mesh/: room1_nav_mesh.gltf  room2_nav_mesh.gltf  room3_nav_mesh.gltf  room4_nav_mesh.gltf
res/shaders/: bounding_box.frag  bounding_box.vert  cursor.frag  cursor.vert  default.frag  default.vert  picking.frag  picking.vert  picking_primitive.frag  picking_primitive.vert  skinned_mesh.frag  skinned_mesh.vert  skinned_mesh_no_light.frag
src/: CMakeLists.txt  aabb.cpp  aabb.h  animated_mesh.cpp  animated_mesh.h  animation.cpp  animation.h  animation_controller.cpp  animation_controller.h  bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  channel.cpp  channel.h  collision_detector.cpp  collision_detector.h  collision_object.cpp  collision_object.h  cursor.cpp  cursor.h  enemy.cpp  enemy.h  enemy_behavior_tree.cpp  enemy_behavior_tree.h  enemy_controller.cpp  enemy_controller.h  enemy_state_machine.cpp  enemy_state_machine.h  game.cpp  game.h  input_controller.h  level_manager.cpp  level_manager.h  light.cpp  light.h  main.cpp  map.cpp  map.h  material.cpp  (+31 more)
