find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS})

find_package(GLEW REQUIRED)
include_directories(${GLEW_INCLUDE_DIRS})

find_package(glfw3 REQUIRED)
find_package(assimp REQUIRED)

set(ENABLE_BOOST_WORKAROUND ON)
set(BUILD_STATIC_LIB ON)
set(BUILD_ASSIMP_TOOLS  ON)
set(ASSIMP_BUILD_STATIC_LIB ON)

add_library(shader shader.cpp shader.h)
add_library(stb stb.cpp)
add_library(texture texture.cpp texture.h)
add_library(camera camera.cpp camera.h)
add_library(animated_mesh animated_mesh.cpp animated_mesh.h)
add_library(player player.cpp player.h)
add_library(enemy enemy.cpp enemy.h)
add_library(enemy_state_machine enemy_state_machine.cpp enemy_state_machine.h)
add_library(light light.cpp light.h)
add_library(map map.cpp map.h)
add_library(cursor cursor.cpp cursor.h)
add_library(collision_object collision_object.cpp collision_object.h)
add_library(collision_detector collision_detector.cpp collision_detector.h)
add_library(object_controller object_controller.cpp object_controller.h)
add_library(input_controller input_controller.cpp input_controller.h)
add_library(animation_controller animation_controller.cpp animation_controller.h)
add_library(player_controller player_controller.cpp player_controller.h)
add_library(enemy_behavior_tree enemy_behavior_tree.cpp enemy_behavior_tree.h)
add_library(utility utility.cpp utility.h)
add_library(material material.cpp material.h)
add_library(channel channel.cpp channel.h)
add_library(animation animation.cpp animation.h)
add_library(skinned_mesh skinned_mesh.cpp skinned_mesh.h)
add_library(nav_mesh nav_mesh.cpp nav_mesh.h)
add_library(aabb aabb.cpp aabb.h)
add_library(bounding_box bounding_box.cpp bounding_box.h)
add_library(picking_texture picking_texture.cpp picking_texture.h)
add_library(level_manager level_manager.cpp level_manager.h)
add_library(node node.cpp node.h)
add_library(timer timer.cpp timer.h)
add_library(sound sound.cpp sound.h)
add_executable(main main.cpp)
target_link_libraries (main shader camera map level_manager cursor animated_mesh player enemy timer collision_object player_controller enemy_behavior_tree enemy_state_machine collision_detector object_controller input_controller animation_controller skinned_mesh nav_mesh texture stb  material assimp channel light animation node utility bounding_box aabb picking_texture sound  OpenGL::GL glfw GLEW::GLEW)

